bin = [
  { name = "1a", path = "src/1a.rs" },
  { name = "1b", path = "src/1b.rs" },
  { name = "2b", path = "src/2b.rs" },
  { name = "2a", path = "src/2a.rs" },
  { name = "3a", path = "src/3a.rs" },
  { name = "3b", path = "src/3b.rs" },
  { name = "4a", path = "src/4a.rs" },
  { name = "4b", path = "src/4b.rs" },
  { name = "5a", path = "src/5a.rs" },
  { name = "6a", path = "src/6a.rs" },
]

[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "*"